--- a/utenti.html
+++ b/utenti.html
@@ -117,9 +117,7 @@
 </head>
 <body>
   <div class="container">
-    <div style="display: block; margin: 30px auto 0px auto; text-align: center; font-family: Arial, sans-serif; font-weight: bold; font-size: 24px;">
-      <span style="color: #87CEEB;">BADGE</span><span style="color: white;">BOX</span>
-    </div>
+    <img src="assets/icons/logo.png" alt="BadgeBox Logo" style="display: block; margin: 30px auto 0px auto; width: 120px; height: auto;" />
     <h1>Archivio Dipendenti</h1>
 
     <form id="form-aggiungi" class="form-riga">
