--- a/storico.html
+++ b/storico.html
@@ -323,41 +323,29 @@
     /* Media query per tablet e schermi medi */
     @media (max-width: 1024px) and (min-width: 768px) {
       .filtro-temporale {
+        display: flex;
+        flex-direction: column;
         gap: 15px;
-        flex-wrap: wrap;
-        justify-content: center;
+        align-items: center;
         padding: 0 20px;
         max-width: 100%;
         margin-bottom: 20px;
       }
 
       .filtro-temporale select {
-        flex: 1 1 100%;
         width: 100%;
-        max-width: 350px;
-        margin: 0 auto 10px auto;
-        order: 1;
+        max-width: 400px;
         font-size: 16px;
         padding: 14px 18px;
         height: 52px;
+        box-sizing: border-box;
       }
 
       .data-container {
-        flex: 1 1 calc(50% - 8px);
-        width: calc(50% - 8px);
-        min-width: 160px;
-        max-width: 220px;
-        margin: 0;
-      }
-
-      .data-container:first-of-type {
-        order: 2;
-        margin-right: 8px;
-      }
-
-      .data-container:last-of-type {
-        order: 3;
-        margin-left: 8px;
+        width: 100%;
+        max-width: 400px;
+        position: relative;
+        box-sizing: border-box;
       }
 
       .filtro-temporale input[type="date"] {
@@ -365,6 +353,7 @@
         font-size: 16px;
         padding: 14px 18px;
         height: 52px;
+        box-sizing: border-box;
       }
 
       .icona-calendario-campo {
